src/test/ui/issues/issue-30302.stderr
warning[E0170]: pattern binding `Nil` is named the same as one of the variants of the type `Stack`
  --> $DIR/issue-30302.rs:13:9
   |
LL |         Nil => true,
   |         ^^^ help: to match on the variant, qualify the path: `Stack::Nil`

error: unreachable pattern
  --> $DIR/issue-30302.rs:15:9
   |
LL |         Nil => true,
   |         --- matches any value
LL |
LL |         _ => false
   |         ^ unreachable pattern
   |
note: lint level defined here
  --> $DIR/issue-30302.rs:4:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0170`.
